force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Notes__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Notes__c</fullName>
        <description>Notes printed on the generated PDF document.</description>
        <inlineHelpText>Notes printed on the generated PDF document.</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>