force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__PricebookId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricebookId__c</fullName>
        <description>ID of the Price Book used by this quote.</description>
        <inlineHelpText>ID of the Price Book used by this quote.</inlineHelpText>
        <label>Pricebook ID</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>