force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__QuoteTemplateId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteTemplateId__c</fullName>
        <description>ID of quote template that must be used when generating documents from this quote.</description>
        <inlineHelpText>Stores a quote template ID if one is specified to use when generating quote PDF documents.</inlineHelpText>
        <label>Quote Template Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>