force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__RenewalUpliftRate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </CustomField>