force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ShippingCity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShippingCity__c</fullName>
        <description>City on the Ship To address for this quote.</description>
        <inlineHelpText>City on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>