force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ShippingName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShippingName__c</fullName>
        <description>Name on the Ship To address for this quote.</description>
        <inlineHelpText>Name on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>