force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ShippingPostalCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShippingPostalCode__c</fullName>
        <description>Postal Code on the Ship To address for this quote.</description>
        <inlineHelpText>Postal Code on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>