force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ShippingState__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShippingState__c</fullName>
        <description>State/Province on the Ship To address for this quote.</description>
        <inlineHelpText>State/Province on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>