force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ShippingStreet__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShippingStreet__c</fullName>
        <description>Street on the Ship To address for this quote.</description>
        <inlineHelpText>Street on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </CustomField>