force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__StartDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Start date for subscriptions in this quote.</description>
        <inlineHelpText>Start date for subscriptions in this quote.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>