force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Payment_Terms__c.field-meta.xml
<CustomField>
        <fullName>Service_Payment_Terms__c</fullName>
        <label>Service Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>