force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Sub_Type__c</fullName>
    <description>RUBX-99</description>
    <inlineHelpText>Pulled from the Opportunity lookup record</inlineHelpText>
    <label>Service Sub-Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>