force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Amount__c.field-meta.xml
<CustomField>
        <fullName>Services_Amount__c</fullName>
        <inlineHelpText>&quot;SVFF SVFT SVFP SVTM SVPT SVTT&quot;</inlineHelpText>
        <label>Services Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>