force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Quote_Line_Dates__c.field-meta.xml
<CustomField>
        <fullName>Show_Quote_Line_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this box to show the Quote Line Start and End Date in the QLE.</description>
        <inlineHelpText>Select this box to show the Quote Line Start and End Date in the QLE.</inlineHelpText>
        <label>Show Quote Line Dates</label>
        <type>Checkbox</type>
    </CustomField>