force-app/main/default/objects/SBQQ__Quote__c/fields/Software_Cloud_Recurring_Fee_Discount__c.field-meta.xml
<CustomField>
        <fullName>Software_Cloud_Recurring_Fee_Discount__c</fullName>
        <label>Software/Cloud Recurring Fee Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>