force-app/main/default/objects/SBQQ__Quote__c/fields/Software_Initial__c.field-meta.xml
<CustomField>
        <fullName>Software_Initial__c</fullName>
        <inlineHelpText>&quot;ILF ILSF DVC1 DVF2&quot;</inlineHelpText>
        <label>Software Initial</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>