force-app/main/default/objects/SBQQ__Quote__c/fields/Software_Initial_ACV_Equiv_List_Price__c.field-meta.xml
<CustomField>
        <fullName>Software_Initial_ACV_Equiv_List_Price__c</fullName>
        <formula>Software_Initial__c /  ACV_Equivalent_List_Price_excl_RA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Initial/ACV Equiv List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>