force-app/main/default/objects/SBQQ__Quote__c/fields/Software_RLF__c.field-meta.xml
<CustomField>
        <fullName>Software_RLF__c</fullName>
        <inlineHelpText>&quot;RLF RLFR RLFF&quot;</inlineHelpText>
        <label>Software RLF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>