force-app/main/default/objects/SBQQ__Quote__c/fields/Software_SUB__c.field-meta.xml
<CustomField>
        <fullName>Software_SUB__c</fullName>
        <inlineHelpText>&quot;ILSS DVCS&quot;</inlineHelpText>
        <label>Software SUB</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>