force-app/main/default/objects/SBQQ__Quote__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
        <fullName>Special_Instructions__c</fullName>
        <description>Used to display a special set of instructions on the quote output doc. Filled in by the user.</description>
        <inlineHelpText>Fill this in with any special instructions that you would like the Customer to see.</inlineHelpText>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>