force-app/main/default/objects/SBQQ__Quote__c/fields/Standard_Index__c.field-meta.xml
<CustomField>
        <fullName>Standard_Index__c</fullName>
        <inlineHelpText>Always select Standard Rate. This is Finastra Standard Rate and it will apply when CPI Index Type = CAP is selected. Otherwise, this value will be ignored</inlineHelpText>
        <label>Standard Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Rate</fullName>
                    <default>true</default>
                    <label>Standard Rate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>