force-app/main/default/objects/SBQQ__Quote__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </CustomField>