force-app/main/default/objects/SBQQ__Quote__c/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <formula>SBQQ__NetAmount__c
/*(SBQQ__NetAmount__c / 12 * SBQQ__SubscriptionTerm__c)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>